--- a/myinatagram/src/main/res/values/strings.xml
+++ b/myinatagram/src/main/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
     <string name="app_name">MyInatagram</string>
 
+    <string name="image_picker_album_all">All</string>
+    <string name="image_picker_empty">Empty</string>
+    <string name="image_picker_title">Select Image</string>
+    <string name="image_picker_done">Done</string>
+    <string name="image_picker_max_count">You can not add more</string>
+    <string name="image_picker_min_count">You have to choice images</string>
+
 </resources>
